<resources>
    <string name="app_name">TagLess</string>
    <string-array name="langues">
        <item>Français</item>
        <item>Anglais</item>
    </string-array>
    <string name="scanner">Scanner</string>
    <string name="chercher">Chercher</string>
    <string name="text1">Scannez, Comparez, Économisez</string>
    <string name="parametre">Paramètres</string>
    <string name="langue">Langue</string>
    <string name="apropos">À propos</string>
    <string name="mssgapropos">Mon Application v1.0 \nDéveloppée par Dania</string>
    <string name="bienvenue">Bienvenue sur TagLess</string>
    <string name="cnx">Se connecter</string>
    <string name="inscription">Créer un compte</string>
    <string name="email">E-mail</string>
    <string name="motdepasse">Mot de passe</string>
    <string name="creeruncompte">Créer un compte</string>
    <string name="nomcomplet">Nom complet</string>
    <string name="pascompteinscr">Pas encore de compte ? Inscrivez-vous</string>
    <string name="contact_support">Contact Support</string>
    <string name="msg_contact_support">
    Vous pouvez nous contacter à : support@monsite.com\nNous répondrons rapidement !
</string>
    <string name="meslistes">Mes listes</string>
    <string name="chrchali">Chercher votre aliment</string>
    <string name="Acceuil">Acceuil</string>
    <string name="Localisation">Localisation</string>


<!--    &lt;!&ndash; Strings used for fragments for navigation &ndash;&gt;-->
<!--    <string name="first_fragment_label">First Fragment</string>-->
<!--    <string name="second_fragment_label">Second Fragment</string>-->
<!--    <string name="next">Next</string>-->
<!--    <string name="previous">Previous</string>-->

<!--    <string name="lorem_ipsum">-->
<!--        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris-->
<!--        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus-->
<!--        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad-->
<!--        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend-->
<!--        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,-->
<!--        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n-->
<!--        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus-->
<!--        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed-->
<!--        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada-->
<!--        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,-->
<!--        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor-->
<!--        bibendum, vel congue leo egestas.\n\n-->
<!--        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit-->
<!--        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,-->
<!--        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer-->
<!--        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at-->
<!--        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,-->
<!--        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque-->
<!--        est.\n\n-->
<!--        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.-->
<!--        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui-->
<!--        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In-->
<!--        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,-->
<!--        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra-->
<!--        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a-->
<!--        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus-->
<!--        convallis.\n\n-->
<!--        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et-->
<!--        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa-->
<!--        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,-->
<!--        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper-->
<!--        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus-->
<!--        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus-->
<!--        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.-->
<!--    </string>-->
<!--    &lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;-->
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->


</resources>
