<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:orientation="vertical"
    >


    <ImageButton
        android:id="@+id/buttonParametre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_alignParentEnd="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_parametre"
        android:layout_marginRight="150dp"
        android:layout_marginTop="15dp"

        />
    <ImageButton
        android:id="@+id/buttonProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="493dp"
        android:layout_marginRight="75dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_account"/>

    <ImageButton
        android:id="@+id/buttonFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="15dp"
        android:src="@drawable/icon_favorite_full"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/logo"
        />

    <TextView
        android:id="@+id/tvInscriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:text="@string/creeruncompte"
        android:shadowColor="@color/turquoise"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:textSize="20sp"
        android:fontFamily="@font/montserratbold"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/editNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nomcomplet"
        android:layout_below="@id/tvInscriptionTitle"
        android:drawableStart="@drawable/icon_account"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@id/editNom"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/icon_email"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editEmail"
        android:hint="@string/motdepasse"
        android:inputType="textPassword"
        android:drawableStart="@drawable/icon_password"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnValiderInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:fontFamily="@font/montserratbold"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/turquoise"
        android:textColor="@android:color/white"
        android:layout_below="@id/editPassword"
        android:layout_marginTop="30dp" />

</RelativeLayout>
