<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg">



    <ImageButton
        android:id="@+id/buttonParametre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_alignParentEnd="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_parametre"
        android:layout_marginRight="150dp"
        android:layout_marginTop="15dp"

        />
    <ImageButton
        android:id="@+id/buttonProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="493dp"
        android:layout_marginRight="75dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_account"/>

    <ImageButton
        android:id="@+id/buttonFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="15dp"
        android:src="@drawable/icon_favorite_full"/>
    <!-- LOGO -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo" />

    <!-- TITRE -->
    <TextView
        android:id="@+id/tvConnexionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/cnx"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserratbold" />

    <!-- EMAIL -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvConnexionTitle"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:drawableStart="@drawable/icon_email"
        android:hint="@string/email"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/turquoise" />

    <!-- PASSWORD -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:drawableStart="@drawable/icon_password"
        android:hint="@string/motdepasse"
        android:padding="12dp"
        android:inputType="textPassword"
        android:backgroundTint="@color/turquoise" />

    <!-- BOUTON CONNEXION -->
    <Button
        android:id="@+id/btnConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/bleunuit"
        android:text="@string/cnx"
        android:textColor="@android:color/white"
        android:fontFamily="@font/montserratbold" />

    <!-- LIEN INSCRIPTION -->
    <TextView
        android:id="@+id/tvInscriptionLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnConnexion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/pascompteinscr"
        android:textColor="@color/black"
        android:fontFamily="@font/montserratbold" />

</RelativeLayout>

